[gd_scene load_steps=11 format=2]

[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://GameHUDRelated/Tooltips/TooltipBodyConstructors/TooltipBody.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Green_Related/GUIRelated/Assets/Horticulturist_Icon.png" type="Texture" id=3]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Green_Related/GUIRelated_V3/Subs/Green_SinglePathSelectionGUI_V3/Green_SinglePathSelectionGUI_V3.gd" type="Script" id=4]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Green_Related/GUIRelated_V3/AssetsV3/GreenOuterBorder_4x4_Normal.png" type="Texture" id=5]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Green_Related/GUIRelated_V3/AssetsV3/GreenInnerBorder_4x4_Normal.png" type="Texture" id=6]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Green_Related/GUIRelated_V3/AssetsV3/TierDecors/DomSynGreen_TierDecor_Tier01.png" type="Texture" id=7]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Green_Related/GUIRelated_V3/AssetsV3/BrownBackground_3x3_ForDescriptions.png" type="Texture" id=8]
[ext_resource path="res://MiscRelated/GUI_Category_Related/AdvancedButton/AdvancedButton.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="Green_SinglePathSelectionGUI_V3" type="MarginContainer"]
margin_right = 77.0
margin_bottom = 73.0
rect_min_size = Vector2( 200, 260 )
mouse_filter = 2
script = ExtResource( 4 )

[node name="OuterBorder_Left" type="TextureRect" parent="."]
margin_right = 4.0
margin_bottom = 260.0
mouse_filter = 2
size_flags_horizontal = 2
texture = ExtResource( 5 )
stretch_mode = 2

[node name="OuterBorder_Right" type="TextureRect" parent="."]
margin_left = 196.0
margin_right = 200.0
margin_bottom = 260.0
mouse_filter = 2
size_flags_horizontal = 10
texture = ExtResource( 5 )
stretch_mode = 2

[node name="OuterBorder_Top" type="TextureRect" parent="."]
margin_right = 200.0
margin_bottom = 4.0
mouse_filter = 2
size_flags_vertical = 2
texture = ExtResource( 5 )
stretch_mode = 2

[node name="OuterBorder_Bottom" type="TextureRect" parent="."]
margin_top = 256.0
margin_right = 200.0
margin_bottom = 260.0
mouse_filter = 2
size_flags_vertical = 10
texture = ExtResource( 5 )
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 200.0
margin_bottom = 260.0
mouse_filter = 2
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="Background" type="TextureRect" parent="MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 196.0
margin_bottom = 256.0
mouse_filter = 2
texture = ExtResource( 8 )
stretch_mode = 2

[node name="InnerBorder_Left" type="TextureRect" parent="MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 8.0
margin_bottom = 256.0
mouse_filter = 2
size_flags_horizontal = 2
texture = ExtResource( 6 )
stretch_mode = 2

[node name="InnerBorder_Right" type="TextureRect" parent="MarginContainer"]
margin_left = 192.0
margin_top = 4.0
margin_right = 196.0
margin_bottom = 256.0
mouse_filter = 2
size_flags_horizontal = 10
texture = ExtResource( 6 )
stretch_mode = 2

[node name="InnerBorder_Top" type="TextureRect" parent="MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 196.0
margin_bottom = 8.0
mouse_filter = 2
size_flags_vertical = 2
texture = ExtResource( 6 )
stretch_mode = 2

[node name="InnerBorder_Bottom" type="TextureRect" parent="MarginContainer"]
margin_left = 4.0
margin_top = 252.0
margin_right = 196.0
margin_bottom = 256.0
mouse_filter = 2
size_flags_vertical = 10
texture = ExtResource( 6 )
stretch_mode = 2

[node name="Decor_TopLeft" type="TextureRect" parent="MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 196.0
margin_bottom = 256.0
mouse_filter = 2
texture = ExtResource( 7 )

[node name="Decor_TopRight" type="TextureRect" parent="MarginContainer"]
margin_left = 171.0
margin_top = 4.0
margin_right = 196.0
margin_bottom = 256.0
mouse_filter = 2
size_flags_horizontal = 10
texture = ExtResource( 7 )
flip_h = true

[node name="Decor_BottomRight" type="TextureRect" parent="MarginContainer"]
margin_left = 171.0
margin_top = 231.0
margin_right = 196.0
margin_bottom = 256.0
mouse_filter = 2
size_flags_horizontal = 10
size_flags_vertical = 10
texture = ExtResource( 7 )
flip_h = true
flip_v = true

[node name="Decor_BottomLeft" type="TextureRect" parent="MarginContainer"]
margin_left = 4.0
margin_top = 231.0
margin_right = 196.0
margin_bottom = 256.0
mouse_filter = 2
size_flags_vertical = 10
texture = ExtResource( 7 )
flip_v = true

[node name="ContentMarginer" type="MarginContainer" parent="MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 196.0
margin_bottom = 256.0
mouse_filter = 2
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ContentMarginer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 180.0
margin_bottom = 240.0
mouse_filter = 2
custom_constants/separation = 7

[node name="PathIcon" type="TextureRect" parent="MarginContainer/ContentMarginer/VBoxContainer"]
margin_left = 62.0
margin_right = 106.0
margin_bottom = 44.0
mouse_filter = 2
size_flags_horizontal = 6
texture = ExtResource( 3 )

[node name="PathLabel" type="Label" parent="MarginContainer/ContentMarginer/VBoxContainer"]
margin_left = 21.0
margin_top = 51.0
margin_right = 147.0
margin_bottom = 68.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 1 )
text = "Horticulturist"

[node name="PathDescriptions" parent="MarginContainer/ContentMarginer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 75.0
margin_right = 168.0
margin_bottom = 75.0
default_font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
default_font_size = 14

[node name="AdvancedButton" parent="." instance=ExtResource( 9 )]
margin_right = 200.0
margin_bottom = 260.0

[connection signal="visibility_changed" from="." to="." method="_on_Green_SinglePathSelectionGUI_V3_visibility_changed"]
[connection signal="mouse_entered" from="AdvancedButton" to="." method="_on_AdvancedButton_mouse_entered"]
[connection signal="mouse_exited" from="AdvancedButton" to="." method="_on_AdvancedButton_mouse_exited"]
[connection signal="released_mouse_event" from="AdvancedButton" to="." method="_on_AdvancedButton_released_mouse_event"]
